Added localization for message properties